Added nextTick to make rest of grids draggable.

--- a/demo/vue3js_v-for.html
+++ b/demo/vue3js_v-for.html
@@ -119,9 +119,11 @@
           function remove(widget) {
             var index = items.value.findIndex(w => w.id == widget.id);
             items.value.splice(index, 1);
-            const selector = `#${widget.id}`;
-            grid.removeWidget(selector, false);
-            updateInfo();            
+            nextTick(() => {
+              const selector = `#${widget.id}`;
+              grid.removeWidget(selector, false);
+              updateInfo(); 
+            });           
           }
           
           function updateInfo() {
